Fix dragging out of bounds behaviour

--- a/code/site/styles/App.scss
+++ b/code/site/styles/App.scss
@@ -53,7 +53,7 @@ section.preview {
   div.draggable {
     border: 5px dashed transparent;
     cursor: move;
-    padding: 1em;
+    padding: 0.5em;
     position: absolute;
     text-align: center;
     transition: border 0.2s ease;
